final edit of gulp task css

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <div class="test">TODO write content ger geeeeeeeeeeghmgheee</div>
-        <div class="m-box"></div>
+        <div class="m-box">sger</div>
     </body>
 </html>
